--- a/gpiodctl/Cargo.toml
+++ b/gpiodctl/Cargo.toml
@@ -12,5 +12,6 @@ version = "0.1.0"
 anyhow = "1.0"
 clap = {version = "3.1", features = ["derive", "env"]}
 gpiod = {path = "../gpiod", features = ["uapi_v1", "uapi_v2"]}
+rustyline = "9.1.0"
 strum = {version = "0.24", features = ["derive"]}
 thiserror = "1.0"
