--- a/gpiodctl/Cargo.toml
+++ b/gpiodctl/Cargo.toml
@@ -11,6 +11,7 @@ version = "0.1.0"
 [dependencies]
 anyhow = "1.0"
 clap = {version = "3.1", features = ["derive", "env"]}
+colored = "2"
 gpiod = {path = "../gpiod", features = ["uapi_v1", "uapi_v2"]}
 rustyline = "9.1.0"
 strum = {version = "0.24", features = ["derive"]}
