--- a/gpiodctl/Cargo.toml
+++ b/gpiodctl/Cargo.toml
@@ -14,5 +14,6 @@ clap = {version = "3.1", features = ["derive", "env"]}
 colored = "2"
 gpiod = {path = "../gpiod", features = ["uapi_v1", "uapi_v2"]}
 rustyline = "9.1.0"
+rustyline-derive = "0.6.0"
 strum = {version = "0.24", features = ["derive"]}
 thiserror = "1.0"
