--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -5,13 +5,13 @@ description = "A library to access GPIO lines on Linux using the GPIO character 
 edition = "2021"
 keywords = ["linux", "gpio", "library", "embedded"]
 license = "MIT"
-name = "gpiod"
+name = "gpiocdev"
 version = "0.1.0"
 
 [dependencies]
 bitmaps = {version = "3.1.0"}
 chrono = "0.4"
-gpiod-uapi = {version = "0.1.0", path = "../uapi", features = ["uapi_v1", "uapi_v2"], optional = true}
+gpiocdev-uapi = {version = "0.1.0", path = "../uapi", features = ["uapi_v1", "uapi_v2"], optional = true}
 nohash-hasher = "0.2.0"
 thiserror = "1.0"
 
@@ -20,5 +20,5 @@ anyhow = "1.0"
 
 [features]
 default = ["uapi_v2"]
-uapi_v1 = ["gpiod-uapi/uapi_v1"]
-uapi_v2 = ["gpiod-uapi/uapi_v2"]
+uapi_v1 = ["gpiocdev-uapi/uapi_v1"]
+uapi_v2 = ["gpiocdev-uapi/uapi_v2"]
