--- a/uapi/Cargo.toml
+++ b/uapi/Cargo.toml
@@ -5,14 +5,14 @@ description = "A low level library to access GPIO lines on Linux using the GPIO 
 edition = "2021"
 keywords = ["linux", "gpio", "library", "embedded"]
 license = "MIT"
-name = "gpiod-uapi"
+name = "gpiocdev-uapi"
 version = "0.1.0"
 
 [dependencies]
 bitflags = "1.3"
 bitmaps = {version = "3.1.0"}
 libc = "0.2"
-nix = "0.23.0"
+nix = "0.24.1"
 thiserror = "1.0"
 
 [features]
