--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -11,12 +11,14 @@ version = "0.1.0"
 [dependencies]
 bitmaps = {version = "3.1.0"}
 chrono = "0.4"
+errno = "0.2.8"
 gpiocdev-uapi = {version = "0.1.0", path = "../uapi", features = ["uapi_v1", "uapi_v2"], optional = true}
 nohash-hasher = "0.2.0"
 thiserror = "1.0"
 
 [dev-dependencies]
 anyhow = "1.0"
+gpiosim = {version = "0.1.0", path = "../gpiosim"}
 
 [features]
 default = ["uapi_v2"]
