--- a/uapi/Cargo.toml
+++ b/uapi/Cargo.toml
@@ -11,6 +11,7 @@ version = "0.1.0"
 [dependencies]
 bitflags = "1.3"
 bitmaps = {version = "3.1.0"}
+errno = "0.2.8"
 libc = "0.2"
 nix = "0.24.1"
 thiserror = "1.0"
