--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -9,15 +9,18 @@ name = "gpiocdev-cli"
 version = "0.1.0"
 
 [[bin]]
-name="gpiocdev"
-path="src/main.rs"
+name = "gpiocdev"
+path = "src/main.rs"
 
 [dependencies]
 anyhow = "1.0"
+chrono = "0.4"
 clap = {version = "4.0", features = ["derive", "env"]}
-colored = "2"
-daemonize = "0.4.1"
+colored = "2.0"
+daemonize = "0.4"
 gpiocdev = {path = "../lib", features = ["uapi_v1", "uapi_v2"]}
+libc = "0.2"
+nohash-hasher = "0.2"
 rustyline = "10.0"
 rustyline-derive = "0.7"
 thiserror = "1.0"
