--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 keywords = ["linux", "gpio", "library", "embedded"]
 license = "MIT"
 name = "gpiocdev"
+repository = "https://github.com/warthog618/gpiocdev-rs"
 version = "0.1.0"
 
 [dependencies]
