--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -19,7 +19,7 @@ chrono = "0.4"
 clap = {version = "4.0", features = ["derive", "env"]}
 colored = "2.0"
 daemonize = "0.4"
-gpiocdev = {path = "../lib", features = ["uapi_v1", "uapi_v2"]}
+gpiocdev = {version = "0.1.0", path = "../lib", features = ["uapi_v1", "uapi_v2"]}
 libc = "0.2"
 mio = {version = "0.8", features = ["os-ext"]}
 nohash-hasher = "0.2"
