--- a/uapi/Cargo.toml
+++ b/uapi/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 authors = ["Kent Gibson <warthog618@gmail.com>"]
-categories = ["hardware-support", "os::linux-apis", "embedded", "external-ffi-bindings"]
+categories = ["hardware-support", "os::linux-apis", "embedded", "api-bindings"]
 description = "A low level library to access GPIO lines on Linux using the GPIO character device"
 edition = "2021"
 keywords = ["linux", "gpio", "library", "embedded"]
