--- a/uapi/Cargo.toml
+++ b/uapi/Cargo.toml
@@ -7,7 +7,7 @@ keywords = ["linux", "gpio", "library", "embedded"]
 license = "MIT"
 name = "gpiocdev-uapi"
 repository = "https://github.com/warthog618/gpiocdev-rs"
-version = "0.1.0"
+version = "0.1.1"
 
 [dependencies]
 bitflags = "1.3"
@@ -21,3 +21,7 @@ thiserror = "1.0"
 default = ["uapi_v2"]
 uapi_v1 = []
 uapi_v2 = []
+
+[package.metadata.docs.rs]
+all-features = true
+targets = ["x86_64-unknown-linux-gnu", "x686-unknown-linux-gnu"]
