--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/warthog618/gpiocdev-rs"
 version = "0.2.0"
 
 [dependencies]
+async-io = {version = "1.9.0", optional = true}
 bitmaps = {version = "3.2"}
 chrono = "0.4"
 errno = "0.2"
@@ -22,10 +23,12 @@ tokio-stream = {version = "0.1.11", optional = true}
 
 [dev-dependencies]
 anyhow = "1.0"
+async-std = {version = "1.12.0"}
 gpiosim = {version = "0.1.0", path = "../gpiosim"}
 tokio = {version = "1.21", features = ["macros", "rt", "time"]}
 
 [features]
+async_io = ["async-io", "futures"]
 async_tokio = ["tokio-stream", "tokio/net", "futures"]
 default = ["uapi_v2"]
 uapi_v1 = ["gpiocdev-uapi/uapi_v1"]
@@ -34,3 +37,11 @@ uapi_v2 = ["gpiocdev-uapi/uapi_v2"]
 [[example]]
 name = "tokio_watcher"
 required-features = ["async_tokio"]
+
+[[example]]
+name = "async_io_watcher"
+required-features = ["async_io"]
+
+[[example]]
+name = "async_std_watcher"
+required-features = ["async_io"]
