--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,10 +1,14 @@
+# SPDX-FileCopyrightText: 2022 Kent Gibson <warthog618@gmail.com>
+#
+# SPDX-License-Identifier: Apache-2.0 OR MIT
+
 [package]
 authors = ["Kent Gibson <warthog618@gmail.com>"]
 categories = ["hardware-support", "command-line-utilities", "embedded", "os::linux-apis"]
 description = "A tool to access GPIO lines on Linux using the GPIO character device"
 edition = "2021"
 keywords = ["linux", "gpio", "cli", "embedded"]
-license = "MIT"
+license = "Apache-2.0 OR MIT"
 name = "gpiocdev-cli"
 repository = "https://github.com/warthog618/gpiocdev-rs"
 version = "0.2.0"
