--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -23,10 +23,15 @@ chrono = "0.4"
 clap = {version = "4.0", features = ["derive", "env"]}
 colored = "2.0"
 daemonize = "0.4"
-gpiocdev = {version = "0.2.0", path = "../lib", features = ["uapi_v1", "uapi_v2"]}
+gpiocdev = {version = "0.2.0", path = "../lib", default-features = false}
 libc = "0.2"
 mio = {version = "0.8", features = ["os-ext"]}
 nohash-hasher = "0.2"
 rustyline = "10.0"
 rustyline-derive = "0.7"
 thiserror = "1.0"
+
+[features]
+default = ["uapi_v1", "uapi_v2"]
+uapi_v1 = ["gpiocdev/uapi_v1"]
+uapi_v2 = ["gpiocdev/uapi_v2"]
