--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -11,7 +11,7 @@ keywords = ["linux", "gpio", "library", "embedded", "async"]
 license = "Apache-2.0 OR MIT"
 name = "gpiocdev"
 repository = "https://github.com/warthog618/gpiocdev-rs"
-version = "0.2.0"
+version = "0.3.0"
 
 [dependencies]
 async-io = {version = "1.9.0", optional = true}
@@ -19,7 +19,7 @@ bitmaps = {version = "3.2"}
 chrono = "0.4"
 errno = "0.2"
 futures = {version = "0.3", optional = true}
-gpiocdev-uapi = {version = "0.2.0", path = "../uapi", default-features = false}
+gpiocdev-uapi = {version = "0.3.0", path = "../uapi", default-features = false}
 nohash-hasher = "0.2"
 thiserror = "1.0"
 tokio = {version = "1.21", features = ["net"], optional = true}
@@ -28,7 +28,7 @@ tokio-stream = {version = "0.1.11", optional = true}
 [dev-dependencies]
 anyhow = "1.0"
 async-std = {version = "1.12.0"}
-gpiosim = {version = "0.1.0", path = "../gpiosim"}
+gpiosim = {version = "0.2.0", path = "../gpiosim"}
 tokio = {version = "1.21", features = ["macros", "rt", "time"]}
 
 [features]
@@ -49,3 +49,7 @@ required-features = ["async_io"]
 [[example]]
 name = "async_std_watcher"
 required-features = ["async_io"]
+
+[package.metadata.docs.rs]
+all-features = true
+targets = ["x86_64-unknown-linux-gnu", "i686-unknown-linux-gnu"]
