--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Kent Gibson <warthog618@gmail.com>"]
 categories = ["hardware-support", "command-line-utilities", "embedded", "os::linux-apis"]
 description = "A tool to access GPIO lines on Linux using the GPIO character device"
 edition = "2021"
+rust-version = "1.61"
 keywords = ["linux", "gpio", "cli", "embedded"]
 license = "Apache-2.0 OR MIT"
 name = "gpiocdev-cli"
