add tokio_ticking_watcher example

--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -35,12 +35,16 @@ tokio = {version = "1.21", features = ["macros", "rt", "time"]}
 [features]
 async_io = ["async-io", "futures"]
 async_tokio = ["tokio-stream", "tokio/net", "futures"]
-default = ["uapi_v2"]
+default = ["uapi_v2", "async_tokio"]
 uapi_v1 = ["gpiocdev-uapi/uapi_v1"]
 uapi_v2 = ["gpiocdev-uapi/uapi_v2"]
 
 [[example]]
 name = "tokio_watcher"
+required-features = ["async_tokio"]
+
+[[example]]
+name = "tokio_ticking_watcher"
 required-features = ["async_tokio"]
 
 [[example]]
