--- a/uapi/Cargo.toml
+++ b/uapi/Cargo.toml
@@ -8,7 +8,7 @@ categories = ["hardware-support", "os::linux-apis", "embedded", "api-bindings"]
 description = "A low level library to access GPIO lines on Linux using the GPIO character device"
 edition = "2021"
 rust-version = "1.60"
-keywords = ["linux", "gpio", "library", "embedded"]
+keywords = ["linux", "gpio", "gpiochip", "ioctl", "library", "embedded"]
 license = "Apache-2.0 OR MIT"
 name = "gpiocdev-uapi"
 repository = "https://github.com/warthog618/gpiocdev-rs"
