--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -23,6 +23,8 @@ futures = {version = "0.3", optional = true}
 gpiocdev-uapi = {version = "0.3", path = "../uapi", default-features = false}
 human-sort = "0.2"
 nohash-hasher = "0.2"
+serde = {version = "1.0", optional = true}
+serde_derive = {version = "1.0", optional = true}
 thiserror = "1.0"
 tokio = {version = "1.21", features = ["net"], optional = true}
 tokio-stream = {version = "0.1.11", optional = true}
@@ -37,6 +39,7 @@ tokio = {version = "1.21", features = ["macros", "rt", "time"]}
 async_io = ["async-io", "futures"]
 async_tokio = ["tokio-stream", "tokio/net", "futures"]
 default = ["uapi_v2"]
+serde = ["dep:serde", "serde_derive"]
 uapi_v1 = ["gpiocdev-uapi/uapi_v1"]
 uapi_v2 = ["gpiocdev-uapi/uapi_v2"]
 
