--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -12,11 +12,11 @@ license = "Apache-2.0 OR MIT"
 name = "gpiocdev"
 repository = "https://github.com/warthog618/gpiocdev-rs"
 rust-version = "1.60"
-version = "0.4.2"
+version = "0.4.3"
 
 [dependencies]
 async-io = {version = "1.9.0", optional = true}
-bitmaps = {version = "3.2"}
+bitmaps = "3.2"
 chrono = "0.4"
 errno = "0.3"
 futures = {version = "0.3", optional = true}
@@ -29,8 +29,8 @@ tokio-stream = {version = "0.1.11", optional = true}
 
 [dev-dependencies]
 anyhow = "1.0"
-async-std = {version = "1.12"}
-gpiosim = {version = "0.3"}
+async-std = "1.12"
+gpiosim = "0.3"
 tokio = {version = "1.21", features = ["macros", "rt", "time"]}
 
 [features]
