refactor set interactive command parsing and processing. add version command to set interactive. add quit alias for exist to set interactive. start migrating to outputing errors at a higher level rather than where they are found. general tidying up.

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -21,7 +21,7 @@ path = "src/main.rs"
 [dependencies]
 anyhow = "1.0"
 chrono = "0.4"
-clap = {version = "4.0", features = ["derive", "env"]}
+clap = {version = "4.0", features = ["derive", "env", "cargo"]}
 daemonize = "0.5"
 gpiocdev = {version = "0.4", path = "../lib", default-features = false}
 libc = "0.2"
