add json support

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -29,9 +29,14 @@ mio = {version = "0.8", features = ["os-ext"]}
 nohash-hasher = "0.2"
 rustyline = "11.0"
 rustyline-derive = "0.8"
+serde = {version = "1.0", optional = true}
+serde_derive = {version = "1.0", optional = true}
+serde_json = {version = "1.0", optional = true}
 thiserror = "1.0"
 
 [features]
-default = ["uapi_v1", "uapi_v2"]
+default = ["uapi_v1", "uapi_v2", "json"]
+json = ["serde", "dep:serde_json"]
+serde = ["dep:serde", "dep:serde_derive", "gpiocdev/serde"]
 uapi_v1 = ["gpiocdev/uapi_v1"]
 uapi_v2 = ["gpiocdev/uapi_v2"]
