--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -31,6 +31,7 @@ tokio-stream = {version = "0.1.11", optional = true}
 [dev-dependencies]
 anyhow = "1.0"
 async-std = "1.12"
+criterion = "0.5"
 gpiosim = "0.3"
 tokio = {version = "1.21", features = ["macros", "rt", "time"]}
 
@@ -61,3 +62,15 @@ required-features = ["async_io"]
 [package.metadata.docs.rs]
 all-features = true
 targets = ["x86_64-unknown-linux-gnu", "i686-unknown-linux-gnu"]
+
+[[bench]]
+harness = false
+name = "builder"
+
+[[bench]]
+harness = false
+name = "request"
+
+[[bench]]
+harness = false
+name = "sim"
