--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -37,7 +37,7 @@ tokio = {version = "1.21", features = ["macros", "rt", "time"]}
 
 [features]
 async_io = ["dep:async-io", "dep:futures"]
-async_tokio = ["dep:tokio-stream", "tokio/net", "dep:futures"]
+async_tokio = ["dep:tokio-stream", "dep:tokio", "dep:futures"]
 default = ["uapi_v2"]
 serde = ["dep:serde", "dep:serde_derive"]
 uapi_v1 = ["gpiocdev-uapi/uapi_v1"]
