--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -61,7 +61,7 @@ required-features = ["async_io"]
 
 [package.metadata.docs.rs]
 all-features = true
-targets = ["x86_64-unknown-linux-gnu", "i686-unknown-linux-gnu"]
+targets = []
 
 [[bench]]
 harness = false
