--- a/uapi/Cargo.toml
+++ b/uapi/Cargo.toml
@@ -28,4 +28,4 @@ uapi_v2 = []
 
 [package.metadata.docs.rs]
 all-features = true
-targets = ["x86_64-unknown-linux-gnu", "i686-unknown-linux-gnu"]
+targets = []
