--- a/uapi/Cargo.toml
+++ b/uapi/Cargo.toml
@@ -17,7 +17,7 @@ version = "0.5.0"
 [dependencies]
 bitflags = "2.0"
 libc = "0.2"
-nix = "0.26"
+ioctl-sys = "0.8"
 thiserror = "1.0"
 
 [dev-dependencies]
