--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["Kent Gibson <warthog618@gmail.com>"]
 categories = ["hardware-support", "command-line-utilities", "embedded", "os::linux-apis"]
 description = "A tool to access GPIO lines on Linux using the GPIO character device"
 edition = "2021"
-keywords = ["linux", "gpio", "gpiochip", "cli", "embedded"]
+keywords = ["linux", "gpio", "gpiochip", "cli", "chardev"]
 license = "Apache-2.0 OR MIT"
 name = "gpiocdev-cli"
 repository = "https://github.com/warthog618/gpiocdev-rs"
