--- a/uapi/Cargo.toml
+++ b/uapi/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["Kent Gibson <warthog618@gmail.com>"]
 categories = ["hardware-support", "os::linux-apis", "embedded", "api-bindings"]
 description = "A low level library to access GPIO lines on Linux using the GPIO character device"
 edition = "2021"
-keywords = ["linux", "gpio", "ioctl", "library", "embedded"]
+keywords = ["linux", "gpio", "ioctl", "gpiochip", "chardev"]
 license = "Apache-2.0 OR MIT"
 name = "gpiocdev-uapi"
 repository = "https://github.com/warthog618/gpiocdev-rs"
