--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -9,3 +9,12 @@ runner = 'sudo -E'
 
 [target.aarch64-unknown-linux-gnu]
 runner = 'sudo -E'
+
+[target.x86_64-unknown-linux-musl]
+runner = 'sudo -E'
+
+[target.aarch64-unknown-linux-musl]
+runner = 'sudo -E'
+
+[target.arm-unknown-linux-musl]
+runner = 'sudo -E'
