--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -5,7 +5,7 @@
 [package]
 authors = ["Kent Gibson <warthog618@gmail.com>"]
 categories = ["hardware-support", "command-line-utilities", "embedded", "os::linux-apis"]
-description = "A tool to access GPIO lines on Linux using the GPIO character device"
+description = "Access GPIO lines from the Linux command line using the GPIO character device"
 edition = "2021"
 keywords = ["linux", "gpio", "gpiochip", "cli", "chardev"]
 license = "Apache-2.0 OR MIT"
