--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -5,7 +5,7 @@
 [package]
 authors = ["Kent Gibson <warthog618@gmail.com>"]
 categories = ["hardware-support", "api-bindings", "os::linux-apis", "embedded", "asynchronous"]
-description = "A library to access GPIO lines on Linux using the GPIO character device"
+description = "Access GPIO lines on Linux using the GPIO character device"
 edition = "2021"
 keywords = ["linux", "gpio", "gpiochip", "libgpiod", "chardev"]
 license = "Apache-2.0 OR MIT"
