--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -3,16 +3,21 @@
 # SPDX-License-Identifier: Apache-2.0 OR MIT
 
 [package]
-authors = ["Kent Gibson <warthog618@gmail.com>"]
-categories = ["hardware-support", "command-line-utilities", "embedded", "os::linux-apis"]
-description = "Access GPIO lines from the Linux command line using the GPIO character device"
-edition = "2021"
-keywords = ["linux", "gpio", "gpiochip", "cli", "chardev"]
-license = "Apache-2.0 OR MIT"
 name = "gpiocdev-cli"
-repository = "https://github.com/warthog618/gpiocdev-rs"
-rust-version = "1.81"
 version = "0.5.5"
+authors = ["Kent Gibson <warthog618@gmail.com>"]
+edition = "2021"
+rust-version = "1.81"
+description = "Access GPIO lines from the Linux command line using the GPIO character device"
+repository = "https://github.com/warthog618/gpiocdev-rs"
+license = "Apache-2.0 OR MIT"
+keywords = ["chardev", "cli", "gpio", "gpiochip", "linux"]
+categories = [
+  "command-line-utilities",
+  "embedded",
+  "hardware-support",
+  "os::linux-apis",
+]
 
 [[bin]]
 name = "gpiocdev"
@@ -21,21 +26,21 @@ path = "src/main.rs"
 [dependencies]
 anyhow = "1.0"
 chrono = "0.4"
-clap = {version = "4", features = ["derive", "env", "cargo"]}
+clap = { version = "4", features = ["cargo", "derive", "env"] }
 daemonize = "0.5"
-gpiocdev = {version = "0.7", path = "../lib", default-features = false}
+gpiocdev = { version = "0.7", default-features = false, path = "../lib" }
 libc = "0.2"
-mio = {version = "1", features = ["os-ext"]}
-rustyline = "15"
+mio = { version = "1", features = ["os-ext"] }
+rustyline = "17"
 rustyline-derive = "0.11"
-serde = {version = "1.0", optional = true}
-serde_derive = {version = "1.0", optional = true}
-serde_json = {version = "1.0", optional = true}
+serde = { version = "1.0", optional = true }
+serde_derive = { version = "1.0", optional = true }
+serde_json = { version = "1.0", optional = true }
 thiserror = "2.0"
 
 [features]
-default = ["uapi_v1", "uapi_v2", "json"]
-json = ["serde", "dep:serde_json"]
+default = ["json", "uapi_v1", "uapi_v2"]
+json = ["dep:serde_json", "serde"]
 serde = ["dep:serde", "dep:serde_derive", "gpiocdev/serde"]
 uapi_v1 = ["gpiocdev/uapi_v1"]
 uapi_v2 = ["gpiocdev/uapi_v2"]
