--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -3,41 +3,26 @@
 # SPDX-License-Identifier: Apache-2.0 OR MIT
 
 [package]
-authors = ["Kent Gibson <warthog618@gmail.com>"]
-categories = ["hardware-support", "api-bindings", "os::linux-apis", "embedded", "asynchronous"]
-description = "Access GPIO lines on Linux using the GPIO character device"
-edition = "2021"
-keywords = ["linux", "gpio", "gpiochip", "libgpiod", "chardev"]
-license = "Apache-2.0 OR MIT"
 name = "gpiocdev"
-repository = "https://github.com/warthog618/gpiocdev-rs"
-rust-version = "1.64"
 version = "0.7.3"
+authors = ["Kent Gibson <warthog618@gmail.com>"]
+edition = "2021"
+rust-version = "1.64"
+description = "Access GPIO lines on Linux using the GPIO character device"
+repository = "https://github.com/warthog618/gpiocdev-rs"
+license = "Apache-2.0 OR MIT"
+keywords = ["chardev", "gpio", "gpiochip", "libgpiod", "linux"]
+categories = [
+  "api-bindings",
+  "asynchronous",
+  "embedded",
+  "hardware-support",
+  "os::linux-apis",
+]
 
-[dependencies]
-async-io = {version = "2.2", optional = true}
-futures = {version = "0.3", optional = true}
-gpiocdev-uapi = {version = "0.6.3", path = "../uapi", default-features = false}
-serde = {version = "1.0", optional = true}
-serde_derive = {version = "1.0", optional = true}
-thiserror = "2.0"
-tokio = {version = "1.21", features = ["net"], optional = true}
-tokio-stream = {version = "0.1.11", optional = true}
-
-[dev-dependencies]
-anyhow = "1.0"
-async-std = "1"
-criterion = "0.5"
-gpiosim = "0.4"
-tokio = {version = "1.21", features = ["macros", "rt", "time"]}
-
-[features]
-async_io = ["dep:async-io", "dep:futures"]
-async_tokio = ["dep:tokio-stream", "dep:tokio", "dep:futures"]
-default = ["uapi_v2"]
-serde = ["dep:serde", "dep:serde_derive"]
-uapi_v1 = ["gpiocdev-uapi/uapi_v1"]
-uapi_v2 = ["gpiocdev-uapi/uapi_v2"]
+[package.metadata.docs.rs]
+all-features = true
+targets = []
 
 [[example]]
 name = "tokio_watch_line_value"
@@ -54,10 +39,6 @@ required-features = ["async_io"]
 [[example]]
 name = "async_std_watch_line_value"
 required-features = ["async_io"]
-
-[package.metadata.docs.rs]
-all-features = true
-targets = []
 
 [[bench]]
 harness = false
@@ -78,3 +59,28 @@ name = "sim"
 [[bench]]
 harness = false
 name = "value"
+
+[dependencies]
+async-io = { version = "2.2", optional = true }
+futures = { version = "0.3", optional = true }
+gpiocdev-uapi = { version = "0.6.3", default-features = false, path = "../uapi" }
+serde = { version = "1.0", optional = true }
+serde_derive = { version = "1.0", optional = true }
+thiserror = "2.0"
+tokio = { version = "1.21", features = ["net"], optional = true }
+tokio-stream = { version = "0.1.11", optional = true }
+
+[dev-dependencies]
+anyhow = "1.0"
+async-std = "1"
+criterion = "0.7"
+gpiosim = "0.4"
+tokio = { version = "1.21", features = ["macros", "rt", "time"] }
+
+[features]
+async_io = ["dep:async-io", "dep:futures"]
+async_tokio = ["dep:futures", "dep:tokio", "dep:tokio-stream"]
+default = ["uapi_v2"]
+serde = ["dep:serde", "dep:serde_derive"]
+uapi_v1 = ["gpiocdev-uapi/uapi_v1"]
+uapi_v2 = ["gpiocdev-uapi/uapi_v2"]
